@@ -1,7 +1,7 @@
 Source: libqmail
 Section: libs
 Priority: optional
-Maintainer: Manvendra Bhangui <libqmail@indimail.org>
+Maintainer: @email@
 Standards-Version: 3.9.5
 Build-Depends: debhelper (>= 9), binutils, coreutils, libssl-dev, pkg-config, lsb-release
 Homepage: https://github.com/mbhangui/libqmail
