@@ -1,67 +1,204 @@
 #!/bin/sh
 #
 # This script prepares artifacts that can be downloaded for openSUSE build service
-# It creates name.tar.gz, debian.tar.gz and name.spec
+# It creates name.tar.gz, debian.tar.gz and name.spec name.changes
 #
 set -e
-if [ $# -lt 1 ] ; then
-	echo "USAGE: prepare_obs name" 1>&2
-	exit 1
+
+prepare_artifacts()
+{
+  pkg_dir=$1
+  stage=$2
+
+  multi_mode=$3
+
+  if [ $multi_mode -eq 1 ] ; then
+    real_name=$(basename $pkg_dir)
+    echo $pkg_dir|grep "/" >/dev/null
+    if [ $? -eq 0 ] ; then
+      pkg_name=$(basename $pkg_dir|sed -e 's{-x{{g')
+    else
+      pkg_name=$(echo $pkg_dir|sed -e 's{-x{{g')
+    fi
+    if [ -d $pkg_dir ] ; then
+      cd $pkg_dir
+    else
+      echo "$pkg_dir: No such file or directory" 1>&2
+      return 1
+    fi
+    ver=$(cat conf-version)
+    if [ -z "$ver" ] ; then
+      echo "no version found for package $pkg_name" 1>&2
+      exit 1
+    fi
+    echo Preparing $pkg_name-$ver
+  else
+    pkg_name=$1
+    ver=$(cat conf-version)
+    if [ -z "$ver" ] ; then
+      echo "no version found for package $pkg_name" 1>&2
+      exit 1
+    fi
+    echo Preparing $pkg_dir-$ver
+  fi
+  if [ -f default.configure -a ! -f ./configure -o ! -f ./Makefile ] ; then
+    ./default.configure
+  fi
+
+  mkdir -p $stage
+  if [ $multi_mode -eq 0 ] ; then
+    # Create spec file
+    for i in spec changes
+    do
+      if [ -f $pkg_name.$i.in -a -f Makefile -a ! -f $pkg_name.$i ] ; then
+        make $pkg_name.$i
+      fi
+    done
+
+    for i in permissions.easy permissions.secure permissions.paranoid rpmlintrc
+    do
+        if [ -f $pkg_name-$i.in -a -f Makefile -a ! -f $pkg_name-$i ] ; then
+          make $pkg_name-$i
+        fi
+    done
+
+    for i in spec changes
+    do
+      if [ -f $pkg_name.$i ] ; then
+        cp $pkg_name.$i $stage
+      fi
+    done
+
+    for i in permissions.easy permissions.secure permissions.paranoid rpmlintrc
+    do
+        if [ -f $pkg_name-$i ] ; then
+          cp $pkg_name-$i $stage
+        fi
+    done
+  
+    if [ -d debian ] ; then
+      # Create debian.tar.gz
+      if [ -f debian/Makefile.in ] ; then
+        make debian/Makefile
+      fi
+      # all indimail, indimail-mta packages have debian/Makefile
+      if [ -f debian/Makefile ] ; then
+        make -C debian
+          cp debian/debian.tar.gz $stage
+        cp debian/*.dsc $stage
+        make -C debian clean >/dev/null
+      fi
+    fi
+    if [ -f $pkg_name-rpmlintrc ] ; then
+      cp $pkg_name-rpmlintrc $stage
+    fi
+  fi # multi-mode = 0
+
+  if [ -f Makefile ] ; then
+    make clean >/dev/null
+	find . -type d \( -name autom4te.cache -o -name .deps \) -exec /bin/rm -rf {} +
+  fi
+
+  cp -rpf . $stage/$pkg_name-$ver
+  # change cwd to staging directory
+  cd $stage
+  if [ $multi_mode -eq 1 ] ; then
+    ln -s $pkg_name-$ver $real_name
+  fi
+
+  # remove debian directory from archive
+  /bin/rm -rf $pkg_name-$ver/debian
+  tar cfz $pkg_name-$ver.tar.gz $pkg_name-$ver
+  if [ $multi_mode -eq 0 ] ; then
+    /bin/rm -rf $pkg_name-$ver
+  fi
+}
+
+if [ $# -ne 1 ] ; then
+  echo "USAGE: prepare_obs name" 1>&2
+  exit 1
 fi
 name=$1
-if [ $# -eq 2 ] ; then
-	type=$2
+SAVE=$PWD
+if [ -f $name.packages ] ; then
+  /bin/rm -rf $HOME/stage/$name-$ver
+  for i in `cat $name.packages`
+  do
+    prepare_artifacts $i $HOME/stage 1
+    cd $SAVE
+  done
+
+  cd $SAVE
+  if [ ! -f conf-version ] ; then
+    echo "$name: conf-version: No such file or directory" 1>&2
+    return 1
+  fi
+  ver=$(cat conf-version)
+  if [ ! -f conf-release ] ; then
+    echo 1.1 > conf-release
+  fi
+  mkdir -p $HOME/stage
+  echo "Preparing $name-$ver"
+  cp -rp ../catChangeLog $HOME/stage # for spec file, changes, debian/changelog to get built
+  cp -rp . $HOME/stage/$name-$ver
+  cd $HOME/stage/$name-$ver
+
+  # now build the master spec file and master dsc files
+  for i in spec changes
+  do
+    if [ -f $name.$i.in -a -f Makefile -a ! -f $name.$i ] ; then
+      make $name.$i
+    fi
+  done
+
+  for i in permissions.easy permissions.secure permissions.paranoid rpmlintrc
+  do
+      if [ -f $name-$i.in -a -f Makefile -a ! -f $name-$i ] ; then
+        make $name-$i
+      fi
+  done
+
+  for i in spec changes
+  do
+    if [ -f $name.$i ] ; then
+      cp $name.$i $stage
+    fi
+  done
+
+  for i in permissions.easy permissions.secure permissions.paranoid rpmlintrc
+  do
+      if [ -f $name-$i ] ; then
+        cp $name-$i $stage
+      fi
+  done
+
+  if [ -f debian/Makefile.in ] ; then
+    make debian/Makefile
+  fi
+  if [ -f debian/Makefile ] ; then
+    make -C debian
+    cp debian/debian.tar.gz $HOME/stage
+    cp debian/*.dsc $HOME/stage
+    make -C debian clean >/dev/null
+  fi
+  cd $SAVE
+  # do cleanup
+  /bin/rm -rf $HOME/stage/$name-$ver $HOME/stage/catChangeLog
+  for pkg_dir in `cat $name.packages`
+  do
+    real_name=$(basename $pkg_dir)
+    pkg_name=$(echo $real_name|sed -e 's{-x{{g')
+    if [ ! -f $pkg_dir/conf-version ] ; then
+      echo "$pkg_dir/conf-version: No such file or directory" 1>&2
+      return 1
+    fi
+    ver=$(cat $pkg_dir/conf-version)
+    /bin/rm -rf $HOME/stage/$pkg_name-$ver
+    /bin/rm -f $HOME/stage/$real_name
+  done
 else
-	type=0
+  prepare_artifacts $1 $HOME/stage 0
 fi
-ver=$(cat conf-version)
-if [ -z "$ver" ] ; then
-	exit 1
-fi
-if [ $type -eq 1 ] ; then
-	/bin/rm -f ../$name.spec ../$name-$ver.tar.gz ../debian.tar.gz
-fi
-if [ ! -f ./configure -o ! -f ./Makefile ] ; then
-  ./default.configure
-fi
-
-# Create spec file
-if [ ! -f ./$name.spec ] ; then
-  make $name.spec
-fi
-mkdir -p ../stage
-
-# Create debian.tar.gz
-make debian/Makefile
-make -C debian
-cp debian/debian.tar.gz ../stage
-cp $name.spec ../stage
-cp debian/*.dsc ../stage
-if [ -f $name-rpmlintrc ] ; then
-	cp $name-rpmlintrc ../stage
-fi
-
-make -C debian clean
-make clean
-cp -rpf . ../stage/$name-$ver
-
-# change cwd to staging directory
-cd ../stage
-
-#remove debian directory
-/bin/rm -rf $name-$ver/debian
-tar cfz $name-$ver.tar.gz $name-$ver
-mv $name.spec debian.tar.gz $name-$ver.tar.gz *.dsc $HOME
-if [ -f $name-rpmlintrc ] ; then
-	mv $name-rpmlintrc $HOME
-fi
-status=$?
-cd $HOME
-echo HOME=$HOME
-if [ -f $name-rpmlintrc ] ; then
-  /bin/ls -l $name-$ver.tar.gz $name.spec *.dsc debian.tar.gz $name-rpmlintrc
-else
-  /bin/ls -l $name-$ver.tar.gz $name.spec *.dsc debian.tar.gz
-fi
-rmdir stage 2>/dev/null || true
+ls -l $HOME/stage
+echo STAGE=$HOME/stage
 exit $?
