@@ -1,7 +1,9 @@
 *
 Release 1.1 Start 14/02/2021
-03/03/2021
+- 03/03/2021
 01. timeoutread, timeoutwrite - fix data types
+- 17/03/2021
+02. Open Build Service integration
 
 * Sunday 14 February 2021 11:27:21 PM IST
 Release 1.0 Start 21/05/2020
